# 3DSceneTokenizer

./: .gitignore  README.md  pyproject.toml
data_processing/objaverse/: README.md  build_objaverse_split_manifests.py  prepare_objaverse_smoke_ply.py  prepare_objaversepp_quality_ply.py  validate_objaverse_ply_split.py
data_processing/objaverse/manifests/: objaversepp_task_relevant_splits.json  objaversepp_task_relevant_train_objects.csv  objaversepp_task_relevant_train_objects.json  objaversepp_task_relevant_val_objects.csv  (+1 more)
docs/: evaluation.md  experiments.md  final_design.md  object_level_static_generation_experiments.md  octree_node_vae_implementation_plan.md  qwen_3d_task_curriculum.md  understanding_generation_unification.md
scripts/: evaluate_instance_tokenizer.py  evaluate_octree_dataset.py  evaluate_octree_vae_checkpoint.py  export_bench2drive_multicam_ply.py  export_bench2drive_rgbd_ply.py  export_octree_node_bboxes.py  export_octree_vae_surface.py  export_scene_tokens.py  export_scene_tokens_learned.py  prepare_objaverse_smoke_ply.py  prepare_objaversepp_quality_ply.py  train_instance_tokenizer.py  train_octree_node_vae.py  train_octree_node_vqvae.py
src/threedvae/: __init__.py
src/threedvae/data/: dataset.py  (+2 more)
templates/: evaluation_results_template.csv  evaluation_results_template.md
tests/: test_bench2drive_rgbd.py  test_dataset.py  test_eval_metrics.py  test_geometry.py  test_node_dataset.py  test_octree_node_vae.py  test_octree_tokenizer.py  test_pipeline.py  test_ply_loader.py  test_query_sampling.py  test_scene_debug.py  test_torch_guard.py
(+31 files in other folders)
