[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "threedvae"
version = "0.1.0"
description = "Single-frame 3D scene tokenization scaffolding for autonomous driving."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "Pillow>=10"]

[project.optional-dependencies]
train = ["torch>=2.2"]
data = ["pandas>=2", "pyarrow>=15", "trimesh>=4", "DracoPy>=1.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
